--- a/app/src/main/res/layout/parent_layout.xml
+++ b/app/src/main/res/layout/parent_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,6 +7,8 @@
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Task" />
+        android:layout_weight="1"
+        android:text="Task"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
-</LinearLayout>
+</RelativeLayout>
