--- a/app/src/main/res/layout/title_description_dialog.xml
+++ b/app/src/main/res/layout/title_description_dialog.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +7,7 @@
 
     <EditText
         android:id="@+id/taskTitle"
+        style="@android:style/Widget.Material.EditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -15,17 +16,20 @@
 
     <EditText
         android:id="@+id/description"
+        style="@android:style/Widget.Material.EditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/taskTitle"
         android:ems="10"
         android:hint="Description"
-        android:inputType="textPersonName"
-        android:layout_below="@+id/title"
-        android:layout_alignParentStart="true" />
+        android:inputType="textMultiLine" />
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
 
         <Button
             android:id="@+id/cancel"
@@ -47,4 +51,4 @@
             android:text="OK" />
     </TableRow>
 
-</LinearLayout>
+</RelativeLayout>
