--- a/app/src/main/res/layout/parent_layout.xml
+++ b/app/src/main/res/layout/parent_layout.xml
@@ -8,6 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:text="Task"
         android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
