--- a/app/src/main/res/layout/title_description_dialog.xml
+++ b/app/src/main/res/layout/title_description_dialog.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Title"
+        android:hint="Task Title"
         android:inputType="textPersonName" />
 
     <EditText
