--- a/app/src/main/res/layout/parent_layout.xml
+++ b/app/src/main/res/layout/parent_layout.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_height="60dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_weight="1"
         android:text="Task"
+        android:gravity="center_vertical"
         android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
 </RelativeLayout>
