--- a/app/src/main/res/layout/child_layout.xml
+++ b/app/src/main/res/layout/child_layout.xml
@@ -7,6 +7,7 @@
         android:id="@+id/childItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/transparentChild"
         android:text="TextView" />
 
 </LinearLayout>
