--- a/app/src/main/res/layout/parent_layout.xml
+++ b/app/src/main/res/layout/parent_layout.xml
@@ -8,10 +8,10 @@
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="5dp"
         android:layout_weight="1"
-        android:text="Task"
+        android:layout_marginLeft="40dp"
         android:gravity="center_vertical"
+        android:text="Task"
         android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
 </RelativeLayout>
