--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#1a237e</color>
     <color name="transparent">#00000000</color>
+    <color name="transparentChild">#0d000000</color>
 </resources>
