--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimary">#1a237e</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#1a237e</color>
     <color name="transparent">#00000000</color>
