--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/tutorialMenuButton"
+        android:title="Tutorial">
+    </item>
+    <item
         android:id="@+id/logoutMenuButton"
         android:title="Logout">
     </item>
